registry/projects/development/cluster/apps/nginx/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.local.klustered.us`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.local.klustered.us`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-klustered-us-staging-tls
